<resources>
    <string name="app_name">HabitHealth</string>
    <string name="login_btn_title">Login</string>
    <string name="register_prompt">Dont Have an account Register Here</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_btn_title">Register</string>
    <string name="habit_water">Drink 8 Glasses of Water</string>
    <string name="habit_exercise">Exercise for 30 Minutes</string>
    <string name="habit_sleep">Sleep 7 8 Hours</string>
    <string name="save_habits">Save Habits</string>
    <string name="habits_saved">Habits saved successfully</string>
    <string name="habits_failed">Failed to save</string>
    <string name="welcome">Welcome</string>

    <string name="water">Water</string>
    <string name="exercise">Exercise</string>
    <string name="sleep">Sleep</string>

</resources>
